--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
-<!DOCTYPE html> <html> <body> <h1>Hello World!</h1> <p>This is a repo!</p> </body> </html>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(0,0,0);
+        color: white !important;
+    }
+    * {
+        color: white !important;
+    }
+    a:link {
+        color: #0096e2;
+    }
+    a:visited {
+        color: #9d57df;
+    }
+    
+}
+</style>
+</head>
+<body>
+
+
+<style>
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Image{
+text-align:center;
+margin-left: auto;
+margin-right: -9%;
+}
+
+
+
+</style>
+</head>
+<body>
+
+
+
+<img src="https://www.dropbox.com/s/7xx86ejo97ch70q/ishamu2.PNG?raw=1" alt="iShamu" style="width:30%;"class="center">
+
+
+
+
+
+<p><br />
+<span style="font-size:30px;"><strong>iShamu</strong></span></p>
+<p>
+<span style="font-size:8px;">AutoBot,  Scrappy & Yohda</span></p>
+
+<p style="color:#000000;font-size:25px;">
+<h3><a href="https://discord.gg/GUXu4uZ" target="_blank">Help and Support Discord</a></h3>
+
+
+
+<marquee scrollamount="3"  behavior="alternate" direction="left">
+<a href="https://apps.apple.com/us/app/card-crushers-battle-game-tcg/id1341837401?uo=4&at=1010lce4"><img src="https://i.ibb.co/w7Z2DTs/08-F0-C6-FF-A948-4-D7-C-BDF9-9-C6-B0-B2-E1-B22.jpg" alt="08-F0-C6-FF-A948-4-D7-C-BDF9-9-C6-B0-B2-E1-B22" width="100" height="100" border="0">
+<a href="https://apps.apple.com/us/app/shadow-deck-hero-card-game/id1437981505?uo=4&at=1010lce4"><img src="https://i.ibb.co/bzZP2Kn/305-BFE44-1-FC5-4-E0-E-9-F0-D-E382-B7-EE8-B79.jpg" alt="305-BFE44-1-FC5-4-E0-E-9-F0-D-E382-B7-EE8-B79" width="100" height="100" border="0"></a>
+<a href="https://apps.apple.com/us/app/puppet-football-cards-manager/id1111139083?uo=4&at=1010lce4"><img src="https://i.ibb.co/D76TWRW/E8296366-3809-4-EE1-A2-DF-C983-EE9-D084-A.jpg" alt="E8296366-3809-4-EE1-A2-DF-C983-EE9-D084-A"style= width="100" height="100" ></a>
+<a href="https://apps.apple.com/us/app/the-arcana-a-mystic-romance/id1165696961?uo=4&at=1010lce4"><img src="https://i.ibb.co/VDxjBx3/8734-AB3-A-6329-4-E50-BC0-E-9041-B50-D758-D.jpg" alt="8734-AB3-A-6329-4-E50-BC0-E-9041-B50-D758-D "width="100" height="100" border="0"></a>
+
+<a href="https://apps.apple.com/us/app/card-crushers-battle-game-tcg/id1341837401?uo=4&at=1010lce4"><img src="https://i.ibb.co/w7Z2DTs/08-F0-C6-FF-A948-4-D7-C-BDF9-9-C6-B0-B2-E1-B22.jpg" alt="08-F0-C6-FF-A948-4-D7-C-BDF9-9-C6-B0-B2-E1-B22" width="100" height="100" border="0">
+<a href="https://apps.apple.com/us/app/shadow-deck-hero-card-game/id1437981505?uo=4&at=1010lce4"><img src="https://i.ibb.co/bzZP2Kn/305-BFE44-1-FC5-4-E0-E-9-F0-D-E382-B7-EE8-B79.jpg" alt="305-BFE44-1-FC5-4-E0-E-9-F0-D-E382-B7-EE8-B79" width="100" height="100" border="0"></a>
+<a href="https://apps.apple.com/us/app/puppet-football-cards-manager/id1111139083?uo=4&at=1010lce4"><img src="https://i.ibb.co/D76TWRW/E8296366-3809-4-EE1-A2-DF-C983-EE9-D084-A.jpg" alt="E8296366-3809-4-EE1-A2-DF-C983-EE9-D084-A"style= width="100" height="100" ></a>
+<a href="https://apps.apple.com/us/app/the-arcana-a-mystic-romance/id1165696961?uo=4&at=1010lce4"><img src="https://i.ibb.co/VDxjBx3/8734-AB3-A-6329-4-E50-BC0-E-9041-B50-D758-D.jpg" alt="8734-AB3-A-6329-4-E50-BC0-E-9041-B50-D758-D "width="100" height="100" border="0"></a>
+
+</marquee>
+
+
+
+
+ <table align="center">
+ <tbody>
+ <tr>
+ <td>
+
+</style>
+<p style="color:#000000;font-size:25px;">What is iShamu?
+
+</td>
+ </tr>
+ </tbody>
+ </table>
+
+<span style="font-size:14px;"><em> iShamu </em> adds in game currency and automatic wins in a variety of server based games, without the need to modify game files.</span></p>
+
+<p style="color: #000000; font-family: Verdana,Arial,Helvetica,sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;"><span style="font-size:14px;"><strong>Add repo:</strong> <a href="https://12345678/" title="iShamu repo">https://123456678</a></span></p>
+
+<hr style="border: 2px solid Orange;" />
+
+<table align="center">
+ <tbody>
+ <tr>
+ <td>
+
+<select id="menu">
+<option value="" >Please Choose...</option>
+<option value="https://license.autobot.fun/pay/icc">Card Crushers</option>
+<option value="https://license.autobot.fun/pay/ipf">Puppet Football</option>
+<option value="https://license.autobot.fun/pay/isd">Shadow Deck</option>
+<option value="https://license.autobot.fun/pay/ita">The Arcana</option>
+</select><br><br>
+
+</td>
+ </tr>
+ </tbody>
+ </table>
+
+
+<table align="center">
+ <tbody>
+ <tr>
+ <td>
+
+
+<img type="image" onclick="gotosite()"  src="https://www.dropbox.com/s/iw46yv9hb78u4am/PayPal%20Button.PNG?raw=1" />
+
+
+</td>
+ </tr>
+ </tbody>
+ </table>
+
+
+<script>
+function gotosite() {
+  window.location = document.getElementById("menu").value;
+}
+</script> 
+
+</td>
+ </tr>
+ </tbody>
+ </table>
+
+<br /><br /><hr style="border: 2px solid Orange;" /><br />
+
+
+</body>
+</html>
