--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ margin-right: -9%;
 
 
 
-<img src="https://www.dropbox.com/s/7xx86ejo97ch70q/ishamu2.PNG?raw=1" alt="iShamu" style="width:30%;"class="center">
+<img src="site/images/ishamuLogo.PNG" alt="iShamu" style="width:30%;"class="center">
 
 
 
@@ -54,7 +54,7 @@ margin-right: -9%;
 <p><br />
 <span style="font-size:30px;"><strong>iShamu</strong></span></p>
 <p>
-<span style="font-size:8px;">AutoBot,  Scrappy & Yohda</span></p>
+<span style="font-size:8px;">AutoBot, Scrappy & Yohda</span></p>
 
 <p style="color:#000000;font-size:25px;">
 <h3><a href="https://discord.gg/GUXu4uZ" target="_blank">Help and Support Discord</a></h3>
@@ -62,15 +62,15 @@ margin-right: -9%;
 
 
 <marquee scrollamount="3"  behavior="alternate" direction="left">
-<a href="https://apps.apple.com/us/app/card-crushers-battle-game-tcg/id1341837401?uo=4&at=1010lce4"><img src="https://i.ibb.co/w7Z2DTs/08-F0-C6-FF-A948-4-D7-C-BDF9-9-C6-B0-B2-E1-B22.jpg" alt="08-F0-C6-FF-A948-4-D7-C-BDF9-9-C6-B0-B2-E1-B22" width="100" height="100" border="0">
-<a href="https://apps.apple.com/us/app/shadow-deck-hero-card-game/id1437981505?uo=4&at=1010lce4"><img src="https://i.ibb.co/bzZP2Kn/305-BFE44-1-FC5-4-E0-E-9-F0-D-E382-B7-EE8-B79.jpg" alt="305-BFE44-1-FC5-4-E0-E-9-F0-D-E382-B7-EE8-B79" width="100" height="100" border="0"></a>
-<a href="https://apps.apple.com/us/app/puppet-football-cards-manager/id1111139083?uo=4&at=1010lce4"><img src="https://i.ibb.co/D76TWRW/E8296366-3809-4-EE1-A2-DF-C983-EE9-D084-A.jpg" alt="E8296366-3809-4-EE1-A2-DF-C983-EE9-D084-A"style= width="100" height="100" ></a>
-<a href="https://apps.apple.com/us/app/the-arcana-a-mystic-romance/id1165696961?uo=4&at=1010lce4"><img src="https://i.ibb.co/VDxjBx3/8734-AB3-A-6329-4-E50-BC0-E-9041-B50-D758-D.jpg" alt="8734-AB3-A-6329-4-E50-BC0-E-9041-B50-D758-D "width="100" height="100" border="0"></a>
+<a href="https://apps.apple.com/us/app/card-crushers-battle-game-tcg/id1341837401?uo=4&at=1010lce4"><img src="site/images/CC.JPG" alt="CC" width="100" height="100" border="0">
+<a href="https://apps.apple.com/us/app/shadow-deck-hero-card-game/id1437981505?uo=4&at=1010lce4"><img src="site/images/SD.JPG" alt="SD" width="100" height="100" border="0"></a>
+<a href="https://apps.apple.com/us/app/puppet-football-cards-manager/id1111139083?uo=4&at=1010lce4"><img src="site/images/PF.JPG" alt="PF"style= width="100" height="100" ></a>
+<a href="https://apps.apple.com/us/app/the-arcana-a-mystic-romance/id1165696961?uo=4&at=1010lce4"><img src="site/images/TA.JPG" alt="TA"width="100" height="100" border="0"></a>
 
-<a href="https://apps.apple.com/us/app/card-crushers-battle-game-tcg/id1341837401?uo=4&at=1010lce4"><img src="https://i.ibb.co/w7Z2DTs/08-F0-C6-FF-A948-4-D7-C-BDF9-9-C6-B0-B2-E1-B22.jpg" alt="08-F0-C6-FF-A948-4-D7-C-BDF9-9-C6-B0-B2-E1-B22" width="100" height="100" border="0">
-<a href="https://apps.apple.com/us/app/shadow-deck-hero-card-game/id1437981505?uo=4&at=1010lce4"><img src="https://i.ibb.co/bzZP2Kn/305-BFE44-1-FC5-4-E0-E-9-F0-D-E382-B7-EE8-B79.jpg" alt="305-BFE44-1-FC5-4-E0-E-9-F0-D-E382-B7-EE8-B79" width="100" height="100" border="0"></a>
-<a href="https://apps.apple.com/us/app/puppet-football-cards-manager/id1111139083?uo=4&at=1010lce4"><img src="https://i.ibb.co/D76TWRW/E8296366-3809-4-EE1-A2-DF-C983-EE9-D084-A.jpg" alt="E8296366-3809-4-EE1-A2-DF-C983-EE9-D084-A"style= width="100" height="100" ></a>
-<a href="https://apps.apple.com/us/app/the-arcana-a-mystic-romance/id1165696961?uo=4&at=1010lce4"><img src="https://i.ibb.co/VDxjBx3/8734-AB3-A-6329-4-E50-BC0-E-9041-B50-D758-D.jpg" alt="8734-AB3-A-6329-4-E50-BC0-E-9041-B50-D758-D "width="100" height="100" border="0"></a>
+<a href="https://apps.apple.com/us/app/card-crushers-battle-game-tcg/id1341837401?uo=4&at=1010lce4"><img src="site/images/CC.JPG" alt="CC" width="100" height="100" border="0">
+<a href="https://apps.apple.com/us/app/shadow-deck-hero-card-game/id1437981505?uo=4&at=1010lce4"><img src="site/images/SD.JPG" alt="SD" width="100" height="100" border="0"></a>
+<a href="https://apps.apple.com/us/app/puppet-football-cards-manager/id1111139083?uo=4&at=1010lce4"><img src="site/images/PF.JPG" alt="PF"style= width="100" height="100" ></a>
+<a href="https://apps.apple.com/us/app/the-arcana-a-mystic-romance/id1165696961?uo=4&at=1010lce4"><img src="site/images/TA.JPG" alt="TA"width="100" height="100" border="0"></a>
 
 </marquee>
 
@@ -90,9 +90,9 @@ margin-right: -9%;
  </tbody>
  </table>
 
-<span style="font-size:14px;"><em> iShamu </em> adds in game currency and automatic wins in a variety of server based games, without the need to modify game files.</span></p>
+<span style="font-size:14px;"><em> iShamu </em> generates in game currency and automatic wins in a variety of server based games, without the need to modify game files.</span></p>
 
-<p style="color: #000000; font-family: Verdana,Arial,Helvetica,sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;"><span style="font-size:14px;"><strong>Add repo:</strong> <a href="https://12345678/" title="iShamu repo">https://123456678</a></span></p>
+<p style="color: #000000; font-family: Verdana,Arial,Helvetica,sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;"><span style="font-size:14px;"><strong>Add repo:</strong> <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://ishamu.fun" title="iShamu repo">https://ishamu.fun</a></span></p>
 
 <hr style="border: 2px solid Orange;" />
 
@@ -121,7 +121,7 @@ margin-right: -9%;
  <td>
 
 
-<img type="image" onclick="gotosite()"  src="https://www.dropbox.com/s/iw46yv9hb78u4am/PayPal%20Button.PNG?raw=1" />
+<img type="image" onclick="gotosite()"  src="site/images/payButton.PNG" />
 
 
 </td>
