--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
+
 <style>
 @media (prefers-color-scheme: dark) {
     body {
@@ -18,12 +21,8 @@
     }
     
 }
-</style>
-</head>
-<body>
 
 
-<style>
 
 .center {
   display: block;
@@ -36,11 +35,19 @@ text-align:center;
 margin-left: auto;
 margin-right: -9%;
 }
-
-
-
 </style>
+
+
+
+
+<link rel="stylesheet" href="site/bootstrap/css/bootstrap.min.css">
+
 </head>
+
+
+
+
+
 <body>
 
 
@@ -144,5 +151,14 @@ function gotosite() {
 <br /><br /><hr style="border: 2px solid Orange;" /><br />
 
 
+
+
+
+
+
+
+
+<script src="site/bootstrap/js/jquery-3.5.1.min.js"></script>
+<script src="site/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
