--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 
 
+<title>iShamu</title>
+<meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 <style>
 @media (prefers-color-scheme: dark) {
