--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
+
 <style>
 @media (prefers-color-scheme: dark) {
     body {
@@ -39,15 +40,23 @@ text-align:center;
 margin-left: auto;
 margin-right: -9%;
 }
-</style>
-
 
 
 
 <link rel="stylesheet" href="site/bootstrap/css/bootstrap.min.css">
 
-</head>
 
+
+
+
+</style>
+
+
+
+
+
+
+</head>
 
 
 
@@ -61,14 +70,11 @@ margin-right: -9%;
 
 
 
+<p><span style="font-size:30px;"><strong>iShamu</strong></span></p>
+<p><span style="font-size:8px;">AutoBot, Scrappy & Yohda</span></p>
 
-<p><br />
-<span style="font-size:30px;"><strong>iShamu</strong></span></p>
-<p>
-<span style="font-size:8px;">AutoBot, Scrappy & Yohda</span></p>
-
-<p style="color:#000000;font-size:25px;">
-<h3><a href="https://discord.gg/GUXu4uZ" target="_blank">Help and Support Discord</a></h3>
+<p style="color:#000000;font-size:20px;">
+<h4><a href="https://discord.gg/GUXu4uZ" target="_blank">Help and Support Discord</a></h4>
 
 
 
