--- a/index.html
+++ b/index.html
@@ -107,23 +107,25 @@ margin-right: -9%;
  </tbody>
  </table>
 
-<span style="font-size:14px;"><em> iShamu </em> generates in game currency and automatic wins in a variety of server based games, without the need to modify game files.</span></p>
+<span style="font-size:20px;"><em> iShamu </em> generates in game currency and automatic wins in a variety of server based games, without the need to modify game files.</span></p>
 
 <p style="color: #000000; font-family: Verdana,Arial,Helvetica,sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;"><span style="font-size:14px;"><strong>Add repo:</strong> <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://ishamu.fun" title="iShamu repo">https://ishamu.fun</a></span></p>
 
 <hr style="border: 2px solid Orange;" />
+
 
 <table align="center">
  <tbody>
  <tr>
  <td>
 
+
 <select id="menu">
 <option value="" >Please Choose...</option>
-<option value="https://license.autobot.fun/pay/icc">Card Crushers</option>
-<option value="https://license.autobot.fun/pay/ipf">Puppet Football</option>
-<option value="https://license.autobot.fun/pay/isd">Shadow Deck</option>
-<option value="https://license.autobot.fun/pay/ita">The Arcana</option>
+<option value="https://license.autobot.fun/pay/icc">Card Crushers   $9.99</option>
+<option value="https://license.autobot.fun/pay/ipf">Puppet Football   $9.99</option>
+<option value="https://license.autobot.fun/pay/isd">Shadow Deck   $9.99</option>
+<option value="https://license.autobot.fun/pay/ita">The Arcana   $9.99</option>
 </select><br><br>
 
 </td>
@@ -147,25 +149,47 @@ margin-right: -9%;
  </table>
 
 
-<script>
-function gotosite() {
-  window.location = document.getElementById("menu").value;
-}
-</script> 
+
+ <table align="center">
+ <tbody>
+ <tr>
+ <td>
+
+<p style="color:#000000;font-size:17px;">WHEN PURCHASING ENTER YOUR ACTIVATION ID</p>
 
 </td>
  </tr>
  </tbody>
  </table>
 
-<br /><br /><hr style="border: 2px solid Orange;" /><br />
+
+ <table align="center">
+ <tbody>
+ <tr>
+ <td>
+
+<p style="font-size:12px;">This is used to ensure that your Device is activated with a licence to use iShamu. How to get your Activation ID? Your Activation ID can be found when you iShamu and select a game. If you have any questions join the Discord channel linked above. License will last for a year.</p>
+
+</td>
+ </tr>
+ </tbody>
+ </table>
+
+
+<hr style="border: 2px solid Orange;" /><br />
 
 
 
 
+<div style="text-align:center;"><a href="https://ibb.co/Y7N6wLg"><img src="https://i.ibb.co/7JSHL1h/8-B8355-A4-766-E-4630-8-AF9-FA9-C80-FCE2-AA.jpg" alt="8-B8355-A4-766-E-4630-8-AF9-FA9-C80-FCE2-AA"style= "width:35%" border="0"></div></a>
 
 
 
+<script>
+function gotosite() {
+  window.location = document.getElementById("menu").value;
+}
+</script> 
 
 
 <script src="site/bootstrap/js/jquery-3.5.1.min.js"></script>
