--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 
 
+<link rel="icon" type="image/png" href="site/images/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="site/images/favicon-16x16.png" sizes="16x16" />
+
 <title>iShamu</title>
 <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
