--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 
 
+
+
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
+
+<link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/cerulean/bootstrap.min.css" rel="stylesheet" integrity="sha384-LV/SIoc08vbV9CCeAwiz7RJZMI5YntsH8rGov0Y2nysmepqMWVvJqds6y0RaxIXT" crossorigin="anonymous">
+
+
 <link rel="icon" type="image/png" href="site/images/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="site/images/favicon-16x16.png" sizes="16x16" />
 
@@ -70,10 +79,6 @@ margin-right: -9%;
   opacity:0;
 }
 
-
-
-
-<link rel="stylesheet" href="site/bootstrap/css/bootstrap.min.css">
 
 
 
@@ -234,7 +239,16 @@ function gotosite() {
 </script> 
 
 
-<script src="site/bootstrap/js/jquery-3.5.1.min.js"></script>
-<script src="site/bootstrap/js/bootstrap.min.js"></script>
+
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 </body>
 </html>
+
+
+
+
+
