--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ margin-right: -9%;
 
 
 <p><span style="font-size:30px;"><strong>iShamu</strong></span></p>
-<p><span style="font-size:8px;">AutoBot, Scrappy & Yohda</span></p>
+<p><span style="font-size:8px;">AutoBot, Scrappy & Yodah</span></p>
 
 
 
