--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ divTop {
 
 <hr style="border: 2px solid Orange;" />
 
-<img id="myImg" src="site/images/example.JPG" alt="example" style="width:100%;max-width:300px"class="center">
+<img id="myImg" src="site/images/example.PNG" alt="example" style="width:100%;max-width:300px"class="center">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
