--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 
 
+
+
 .center {
   display: block;
   margin-left: auto;
@@ -342,7 +344,9 @@ divTop {
         </h4>
       </div>
       <div id="collapse1" class="panel-collapse collapse in">
-        <div class="panel-body">description.</div>
+        <div class="panel-body"> Generates Premium Currency (Gems or whatnot)
+Auto-Buy Premium Chests/Etc..
+Auto-Win matches (Rewards for clan, event etc).</div>
       </div>
     </div>
     <div class="panel panel-default">
@@ -352,7 +356,9 @@ divTop {
         </h4>
       </div>
       <div id="collapse2" class="panel-collapse collapse">
-        <div class="panel-body"> description </div>
+        <div class="panel-body"> Generates Premium Currency (Gems or whatnot)
+Auto-Buy Premium Chests/Etc..
+Auto-Win matches (Rewards for clan, event etc) </div>
       </div>
     </div>
     <div class="panel panel-default">
@@ -362,7 +368,9 @@ divTop {
         </h4>
       </div>
       <div id="collapse3" class="panel-collapse collapse">
-        <div class="panel-body"> description</div>
+        <div class="panel-body"> Generates Premium Currency (Gems or whatnot)
+Auto-Buy Premium Chests/Etc..
+Auto-Win matches (Rewards for clan, event etc) </div>
       </div>
     </div>
     <div class="panel panel-default">
@@ -372,7 +380,7 @@ divTop {
         </h4>
       </div>
       <div id="collapse4" class="panel-collapse collapse">
-        <div class="panel-body"> description </div>
+        <div class="panel-body"> Sets Key Currency </div>
       </div>
     </div>
   </div> 
