--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
 
 
 
-
-
 .center {
   display: block;
   margin-left: auto;
@@ -344,9 +342,10 @@ divTop {
         </h4>
       </div>
       <div id="collapse1" class="panel-collapse collapse in">
-        <div class="panel-body"> Generates Premium Currency (Gems or whatnot)
-Auto-Buy Premium Chests/Etc..
-Auto-Win matches (Rewards for clan, event etc).</div>
+        <div class="panel-body"><li>Generates Premium Currency (Gems)
+<li>Generates Non-Premium Currency (Gold)
+<li>Generates & Opens Premium Chests
+<li>Auto-Win Battles (Awards: Crowns, Clan Points, Event Points)</div>
       </div>
     </div>
     <div class="panel panel-default">
@@ -356,9 +355,10 @@ Auto-Win matches (Rewards for clan, event etc).</div>
         </h4>
       </div>
       <div id="collapse2" class="panel-collapse collapse">
-        <div class="panel-body"> Generates Premium Currency (Gems or whatnot)
-Auto-Buy Premium Chests/Etc..
-Auto-Win matches (Rewards for clan, event etc) </div>
+        <div class="panel-body"><li>Generates Premium Currency (Gems)
+<li>Generates Non-Premium Currency (Gold)
+<li>Generates & Opens Premium Chests
+<li>Auto-Win Battles (Awards: Crowns, Clan Points, Event Points)</div>
       </div>
     </div>
     <div class="panel panel-default">
@@ -368,9 +368,10 @@ Auto-Win matches (Rewards for clan, event etc) </div>
         </h4>
       </div>
       <div id="collapse3" class="panel-collapse collapse">
-        <div class="panel-body"> Generates Premium Currency (Gems or whatnot)
-Auto-Buy Premium Chests/Etc..
-Auto-Win matches (Rewards for clan, event etc) </div>
+        <div class="panel-body"><li>Generates Premium Currency (Gems)
+<li>Generates Non-Premium Currency (Gold)
+<li>Generates & Opens Premium Chests
+<li>Auto-Win Battles (Awards: Crowns, Clan Points, Event Points)</div>
       </div>
     </div>
     <div class="panel panel-default">
@@ -380,7 +381,8 @@ Auto-Win matches (Rewards for clan, event etc) </div>
         </h4>
       </div>
       <div id="collapse4" class="panel-collapse collapse">
-        <div class="panel-body"> Sets Key Currency </div>
+        <div class="panel-body"><li>Generates Premium Currency (Coins)
+<li>Generates Non-Premium Currency (Keys)</div>
       </div>
     </div>
   </div> 
