--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
 
 
+
 <link rel="icon" type="image/png" href="site/images/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="site/images/favicon-16x16.png" sizes="16x16" />
+
+<link href="site/images/ishamuLogo144x144.PNG" rel="apple-touch-icon">
 
 
 <style>
@@ -177,6 +180,10 @@ divTop {
 
 
 
+
+
+
+
 </style>
 
 
@@ -231,7 +238,7 @@ divTop {
  <td>
 
 </style>
-<p style="color:#000000;font-size:25px;">What is iShamu?
+<p style="color:#000000;font-size:25px;">What is iShamu?</p>
 
 </td>
  </tr>
@@ -397,7 +404,94 @@ divTop {
 <hr style="border: 2px solid Orange;" />
 
 
+
+
+
+
+
+
+ <table align="center">
+ <tbody>
+ <tr>
+ <td>
+
+</style>
+<p style="color:#FFFFFF;font-size:30px;">Installation</p>
+
+</td>
+ </tr>
+ </tbody>
+ </table>
+
+
+
+
+<h3>Step 1: Jailbreak iOS</h3>
+<p>Visit <a href='https://www.reddit.com/r/jailbreak/'>Reddit Jailbreak</a> for assistance on jailbreaking your device.</p>
+
+<h3>Step 2: Add Repo</h3>
+<p>Add repo <a href='cydia://url/https://cydia.saurik.com/api/share#?source=https://ishamu.fun'> https://ishamu.fun</a> to Cydia. Click the link and “Install the Source”</p>
+
+<h3>Step 3: Install Package</h3>
+<p>Search in Cydia for “iShamu” install the package. “AutoTouch” and “cURL” will also be installed.</p>
+
+
+
+<hr style="border: 2px solid Orange;" />
+
+
+
+ <table align="center">
+ <tbody>
+ <tr>
+ <td>
+
+</style>
+<p style="color:#FFFFFF;font-size:30px;">How to use</p>
+
+</td>
+ </tr>
+ </tbody>
+ </table>
+
+
+
+
+<h3>Step 1: Run iShamu</h3>
+<p>Hold down the decrease volume button. Select iShamu from the list.</p>
+
+<h3>Step 2: iShamu menu</h3>
+<p>You can select the game from the list you want to use iShamu with.</p>
+
+<h3>Step 3: Licence</h3>
+<p>iShamu Requires a licence for each game. AutoTouch also requires a licence. AutoTouch licence can be purchased from the AutoTouch app in settings.</p>
+
+
+<hr style="border: 2px solid Orange;" />
+
 </div>
+
+
+
+
+
+
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://iShamu.fun/"> iShamu.fun</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
+
+
+
+
 
 
 
