--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 
 
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
 <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/superhero/bootstrap.min.css" rel="stylesheet" integrity="sha384-R/oa7KS0iDoHwdh4Gyl3/fU7pgvSCt7oyuQ79pkw+e+bMWD9dzJJa+Zqd+XJS0AD" crossorigin="anonymous">
-
 
 
 
@@ -177,7 +177,15 @@ divTop {
 
 
 
-
+.full-width {
+	left: 50%;
+	margin-left: -50vw;
+	margin-right: -50vw;
+	max-width: 100vw;
+	position: relative;
+	right: 50%;
+	width: 100vw;
+}
 
 
 
@@ -216,6 +224,8 @@ divTop {
 
 
 
+<div class="full-width">
+
 <marquee scrollamount="3"  behavior="alternate" direction="left">
 <a href="https://apps.apple.com/us/app/card-crushers-battle-game-tcg/id1341837401?uo=4&at=1010lce4"><img src="site/images/CC.JPG" alt="CC" width="100" height="100" border="0">
 <a href="https://apps.apple.com/us/app/shadow-deck-hero-card-game/id1437981505?uo=4&at=1010lce4"><img src="site/images/SD.JPG" alt="SD" width="100" height="100" border="0"></a>
@@ -229,7 +239,7 @@ divTop {
 
 </marquee>
 
-
+</div>
 
 
  <table align="center">
@@ -249,7 +259,7 @@ divTop {
 
 <p style="color: #000000; font-family: Verdana,Arial,Helvetica,sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;"><span style="font-size:14px;"><strong>Add repo:</strong> <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://ishamu.fun" title="iShamu repo">https://ishamu.fun</a></span></p>
 
-<hr style="border: 2px solid Orange;" />
+<hr style="border: 2px solid Orange;" class="full-width"/>
 
 
 <table align="center">
@@ -323,7 +333,7 @@ divTop {
  </table>
 
 
-<hr style="border: 2px solid Orange;" />
+<hr style="border: 2px solid Orange;" class="full-width" />
 
 <img id="myImg" src="site/images/example.PNG" alt="example" style="width:100%;max-width:300px"class="center">
 
@@ -335,7 +345,7 @@ divTop {
 </div>
 
 
-<hr style="border: 2px solid Orange;" /><br />
+<hr style="border: 2px solid Orange;" class="full-width" /><br />
 
 
 <h2>Games and Features</h2>
@@ -401,7 +411,7 @@ divTop {
 
 
 
-<hr style="border: 2px solid Orange;" />
+<hr style="border: 2px solid Orange;"class="full-width"/>
 
 
 
@@ -437,7 +447,7 @@ divTop {
 
 
 
-<hr style="border: 2px solid Orange;" />
+<hr style="border: 2px solid Orange;" class="full-width"/>
 
 
 
@@ -467,7 +477,7 @@ divTop {
 <p>iShamu Requires a licence for each game. AutoTouch also requires a licence. AutoTouch licence can be purchased from the AutoTouch app in settings.</p>
 
 
-<hr style="border: 2px solid Orange;" />
+<hr style="border: 2px solid Orange;"class="full-width" />
 
 </div>
 
